# metta

./: .dockerignore  .pylintrc  Dockerfile  MANIFEST.in  Makefile  README.md  in-docker.sh  pyproject.toml  setup.cfg  setup.py
demo/: README.md  conftest.py  requirements.txt  test_basic.py
demo/config/: config.json  launchpad.json  mtt.json  terraform.json
demos/custom_plugin/: main.py  metta.py  metta.yml
demos/custom_plugin/config/: environments.yml  fixtures.yml  metta.yml
demos/custom_plugin/plugins/: custom.py
demos/dummy/: conftest.py  metta.py  metta.yml
demos/dummy/config/: fixtures.yml  metta.yml
demos/dummy/test/: test_dummy.py
demos/embedded-terraform/: README.md  conftest.py  metta.py  metta.yml
demos/embedded-terraform/config/: environments.yml  fixtures.yml  metta.yml  terraform.yml
demos/embedded-terraform/tests/: test_host_exec.py  test_k8s_clients.py
demos/embedded-terraform/tf_prodeng_plan/: .gitignore  deploy.sh
demos/features/dummy/: README.md  test_demo.py
demos/launchpad_existing/: README.md  conftest.py  launchpad.yml  test_provisioner.py
demos/launchpad_existing/config/: launchpad.yml  provisioner.yml
demos/launchpad_with_existing/: conftest.py  test_clients.py
demos/launchpad_with_existing/config/: launchpad.example.yml  mtt.yml  variables.yml
demos/ltc/: README.md  conftest.py
demos/ltc/config/: mtt.yml
demos/ltc_upgrade_test/: README.md  conftest.py
demos/ltc_upgrade_test/config/: mtt_mirantis.yml
demos/matrix_testing/: conftest.py  test_matrix.py
demos/matrix_testing/config/: mtt_mirantis.yml  variables.yml
demos/mirantis/cli_cluster_sut_config/: .gitignore  README.md  conftest.py  test_sane.py
demos/mirantis/cli_presets/: README.md  conftest.py
demos/mirantis/launchpad_with_existing/: conftest.py
demos/mirantis/ltc/: .gitignore  README.md  conftest.py  test_clients.py
demos/mirantis/ltc_upgrade_test/: conftest.py
demos/mirantis/matrix_testing/: conftest.py  test_matrix.py
demos/my_own_plugins/: my_output_plugin.py
demos/overriding_config/: README.md  conftest.py  test_sane.py
demos/overriding_config/config/: config.yml  mtt.json  provisioner.yml  terraform.yml
demos/pytest_cli_presets/: README.md  conftest.py  test_clients.py
demos/simple_dummy/: README.md  test_demo.py
demos/simple_dummy/config/: demo.yml  provisioner.yml
demos/terraform_launchpad_mtt_common/: .gitignore  README.md  conftest.py  test_basic.py  test_clients.py
demos/terraform_launchpad_mtt_common/config/: config.json  provisioner.json  terraform.json
docs/: README.md  design.md  getting_started.md  mirantis.md  provisioner.md
docs/cli/: README.md
docs/core/: config.md  configerus.md  environment.md  fixtures.md  plugins.md
docs/developers/: README.md
docs/examples/: README.md
docs/plugins/: cli.md  client.md  output.md  provisioner.md  workload.md
docs/testers/: README.md  pytest.md
mirantis/testing/: README.md  __init__.py
mirantis/testing/metta/: README.md  __init__.py  bootstrap.py  building.py  cli.py  client.py  config.py  discover.py  environment.py  fixture.py  fixtures.py  globals.py  healthcheck.py  importing.py  output.py  plugin.py  provisioner.py  setuptools.py  validation.py  workload.py
mirantis/testing/metta_ansible/: README.md  __init__.py  ansible_callback.py  ansible_play.py  ansiblecli.py  ansiblecli_client.py  ansiblecli_provisioner.py  ansiblecli_workload.py  ansibleinc_callback.py  ansibleinc_play.py  cli.py  provisioner.py
mirantis/testing/metta_binhelper/: __init__.py  binhelper_utility.py
mirantis/testing/metta_cli/: README.md  __init__.py  base.py  config.py  entrypoint.py  (+9 more)
suites/: Jenkinsfile.groovy  README.md  in-docker.sh  pytest.sh  setup.cfg
suites/altrepo/: Jenkinsfile.groovy  conftest.py  metta.yml  setup.cfg
suites/chaos/: Jenkinsfile.groovy  README.md  conftest.py  metta.yml  setup.cfg
suites/clients/: Jenkinsfile.groovy  conftest.py  metta.yml  setup.cfg
suites/cncf/: .gitignore  Jenkinsfile.groovy  conftest.py  metta.yml  setup.cfg
suites/cross-version/: Jenkinsfile.groovy  README.md  conftest.py  metta.yml  pytest.sh  setup.cfg
suites/demo/: .gitignore  README.md  __init__.py  conftest.py  uctt.py
suites/demo/crossversion/: Jenkinsfile.groovy  conftest.py  metta.yml  pytest.sh  setup.cfg
suites/demo/crossversion/config/: envbuilder.yml  fixtures.yml  variables.yml
suites/demo/crossversion/envbuilder/: __init__.py
suites/demo/crossversion/tests/: __init__.py  test_190314_190315.py  test_190315_20100.py  test_190315_20104.py  test_20100_20104.py
suites/dev/: README.md
suites/dev/altrepo/: Jenkinsfile.groovy  README.md  conftest.py  setup.cfg
suites/dev/altrepo/config/: environments.yml  fixtures.yml  mirantis.yml  variables.yml
suites/dev/altrepo/tests/: test_docker_clients.py  test_helm_clients.py  test_host_exec.py  test_k8s_clients.py  test_mke_client.py  test_msr_client.py
suites/docker-k8s-helm/: metta.yml
suites/dummy/: Jenkinsfile.groovy  README.md  metta.yml  setup.cfg
suites/dummy/config/: environments.yml  fixtures.yml  jsonschema.json
suites/dummy/reports/: junit.xml  report.html
suites/dummy/test/: test_dummy.py
suites/infra/docsteam_swarmonly/: Jenkinsfile.groovy  metta.yml  setup.cfg
suites/infra/docsteam_swarmonly/config/: environments.yml  fixtures.yml  launchpad.yml  mirantis.yml  variables.yml
suites/infra/docsteam_swarmonly/manage/: start.py
suites/npods/: .gitignore  Jenkinsfile.groovy  conftest.py  pytest.sh  setup.cfg  ucp-config.toml  values.yml
suites/playground/: conftest.py  ucttc.py
suites/sanity/: .gitignore  Jenkinsfile.groovy  README.md  conftest.py  fixtures.py  metta.py  metta.yml  setup.cfg  uctt.py  ucttc.py
suites/testkit/: Jenkinsfile  conftest.py  setup.cfg
suites/upgrade/: .gitignore  Jenkinsfile.groovy  conftest.py  metta.py  metta.yml  setup.cfg
test/: README.md  test_binhelper.py  test_constructors.py  test_dummy.py
tests/: conftest.py  test_config_behaviour.py  test_config_get_behaviour.py  test_config_sanity.py  test_dummy.py  test_existingprovisioner.py
(+1008 files in other folders)
