[metadata]
name = metta
version = 0.6.0
description = Python Toolbox for testing mirantis products
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mirantis.com/
author = James Nesbitt
author_email = jnesbitt@mirantis.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://github.com/Mirantis/metta

[options]
packages =
    mirantis.testing.metta
    mirantis.testing.metta_cli
    mirantis.testing.metta_common
    mirantis.testing.metta_ansible
    mirantis.testing.metta_dummy
    mirantis.testing.metta_docker
    mirantis.testing.metta_kubernetes
    mirantis.testing.metta_launchpad
    mirantis.testing.metta_terraform
    mirantis.testing.metta_mirantis
include_package_data = True
install_requires =
    configerus>=0.3.6
    pyyaml
    docker
    kubernetes==17.14.0a1
    fire
    pytest


[options.entry_points]
console_scripts=
    metta   = mirantis.testing.metta_cli.entrypoint:main
metta.bootstrap =
    metta_validation       = mirantis.testing.metta.validation:bootstrap
    metta_cli              = mirantis.testing.metta_cli:bootstrap
    metta_launchpad        = mirantis.testing.metta_launchpad:metta_bootstrap
    metta_common           = mirantis.testing.metta_common:bootstrap
    metta_common_config    = mirantis.testing.metta_common:bootstrap_common
    metta_ansible          = mirantis.testing.metta_ansible:bootstrap
    metta_docker           = mirantis.testing.metta_docker:bootstrap
    metta_dummy            = mirantis.testing.metta_dummy:bootstrap
    metta_kubernetes       = mirantis.testing.metta_kubernetes:bootstrap
    metta_terraform        = mirantis.testing.metta_terraform:bootstrap
    metta_mirantis_common  = mirantis.testing.metta_mirantis:bootstrap_common
    metta_mirantis_presets = mirantis.testing.metta_mirantis:bootstrap_presets
