[metadata]
name = mirantis-metta
version = 0.50.1
description = Python Toolbox for testing mirantis products
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mirantis.com/
author = James Nesbitt
author_email = jnesbitt@mirantis.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://github.com/james-nesbitt/metta

[options]
packages =
    mirantis.testing.metta
    mirantis.testing.metta_cli
    mirantis.testing.metta_common
    mirantis.testing.metta_ansible
    mirantis.testing.metta_dummy
    mirantis.testing.metta_docker
    mirantis.testing.metta_kubernetes
    mirantis.testing.metta_launchpad
    mirantis.testing.metta_states
    mirantis.testing.metta_terraform
    mirantis.testing.metta_testkit
    mirantis.testing.metta_sonobuoy
include_package_data = True
install_requires =
    appdirs
    configerus>=3.0.1
    pyyaml
    docker[tls]~=5.0.0
    kubernetes==18.20.0
    fire
    requests
    toml
    py3winrm
    paramiko

[options.entry_points]
console_scripts=
    metta                  = mirantis.testing.metta_cli.entrypoint:main
metta.bootstrap.bootstrapper =
    metta_common           = mirantis.testing.metta_common:bootstrap_bootstrapper
    metta_states           = mirantis.testing.metta_states:bootstrap_bootstrapper
metta.bootstrap.environment =
    metta_cli              = mirantis.testing.metta_cli:bootstrap_environment
    metta_launchpad        = mirantis.testing.metta_launchpad:bootstrap_environment
    metta_common           = mirantis.testing.metta_common:bootstrap_environment
    metta_common_config    = mirantis.testing.metta_common:bootstrap_environment_common
    metta_ansible          = mirantis.testing.metta_ansible:bootstrap_environment
    metta_binhelper        = mirantis.testing.metta_binhelper:bootstrap_environment
    metta_docker           = mirantis.testing.metta_docker:bootstrap_environment
    metta_dummy            = mirantis.testing.metta_dummy:bootstrap_environment
    metta_health           = mirantis.testing.metta_health:bootstrap_environment
    metta_kubernetes       = mirantis.testing.metta_kubernetes:bootstrap_environment
    metta_sonobuoy         = mirantis.testing.metta_sonobuoy:bootstrap_environment
    metta_terraform        = mirantis.testing.metta_terraform:bootstrap_environment
    metta_testkit          = mirantis.testing.metta_testkit:bootstrap_environment

[flake8]
max-line-length = 99

[pycodestyle]
max_line_length = 99
in-place = true
recursive = true
aggressive = 3

[mypy]

[pydocstyle]
