[metadata]
name = mirantis-metta-demo-dummy
version = 0.1.0
description = Metta testing demos : testing workflow with dummy plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mirantis.com/
author = James Nesbitt
author_email = jnesbitt@mirantis.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://github.com/james-nesbitt/metta/demos

[options]
include_package_data = True
install_requires =
    mirantis-metta>=0.8.7
    pytest
    pytest-order
    pytest-html
    pytest-benchmark
