[metadata]
name = mirantis-metta-suites-alt-repo
version = 1.0.2
description = test installing MKE/MSR from sources other than dockerhub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mirantis.com/
author = James Nesbitt
author_email = jnesbitt@mirantis.com
license = Proprietary
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://github.com/james-nesbitt/metta/suites/altrepo

[options]
install_requires =
    mirantis-metta~=0.40.3
    pytest
    pytest-order
    pytest-html
    pytest-benchmark
    pytest-xdist
    pytest-testrail
