[metadata]
name = mirantis-metta-infra-docsteam
version = 1.0.2
description = DOCENG docker/kubernetes stack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mirantis.com/
author = James Nesbitt
author_email = jnesbitt@mirantis.com
license = Proprietary
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Utilities
keywords = infrastructure
project_urls =
    Source=https://github.com/james-nesbitt/metta/suites/clients

[options]
install_requires =
    mirantis-metta~=0.20
